components/networking/manifests/routes/grafana.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: grafana
  namespace: monitoring
spec:
  parentRefs:
    - name: main-gateway
      namespace: nginx-gateway
      sectionName: https
  hostnames:
    - grafana.local
  rules:
    - backendRefs:
        - name: prometheus-grafana
          port: 80
