components/networking/manifests/routes/prometheus.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: prometheus
  namespace: monitoring
spec:
  parentRefs:
    - name: main-gateway
      namespace: nginx-gateway
      sectionName: https
  hostnames:
    - prometheus.local
  rules:
    - backendRefs:
        - name: prometheus-kube-prometheus-prometheus
          port: 9090
